--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#888384</color>
+    <color name="gray1">#DDD9DA</color>
+    <color name="gray">#736A6B</color>
 </resources>
